<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home_fragment"
        android:title="@string/home"
        android:icon="@drawable/home_menu"
        android:enabled="true"/>

    <item
        android:id="@+id/add_expense_fragment"
        android:icon="@drawable/add_menu"
        android:title="@string/add"
        android:enabled="true"/>

    <item
        android:id="@+id/profile_fragment"
        android:title="@string/profile"
        android:icon="@drawable/profile_menu"
        android:enabled="true"/>
    <item
    android:id="@+id/settings_fragment"
    android:title="@string/setting"
    android:icon="@drawable/ic_settings"
    android:enabled="true"/>

</menu>